inserted sility to jekyll

--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
 ---
 layout: default
 ---
-{%include canvas.html %}
 
-
-{%include experiments.html %}
-
-{%include blogentries.html%}
-
+{%include home.html %}
