new Design Implementation started

--- a/home.html
+++ b/home.html
@@ -9,13 +9,13 @@ permalink: /home/
                     <div class="row">
                         <div class="col-sm-7 vertical-center padding-fix">
                             <h1>Design<sup>+</sup> Develope<sup>+</sup> Interactive<sup>+</sup> Art<sup>+</sup></h1>
-                            <p>Hello, I’m Benjamin Thomson. I Have 8 years of experience in Web and UX design. I am worked on a variety of brands and with agencies both big and small.</p>
+                            <p>Hello, I’m Ravi Teja Gangineni. I Have 3 years of experience in Web and UX design. I am worked on a variety of brands and with agencies both big and small.</p>
                             <p class="button-row"><a href="#" class="button solid-button white">Hire Me Now</a><a href="#" class="button solid-button purple">Download CV</a>
                             </p>
                         </div>
                         <!-- end .col-sm-7 -->
                         <div class="col-sm-5 vertical-center">
-                            <img src="images/man01.png" alt="man" class="img-responsive section-img">
+                            <img src="{{ site.url }}/images/man01.png" alt="man" class="img-responsive section-img">
                         </div>
                         <!-- end .col-sm-5 -->
                     </div>
