--- a/Skill.html
+++ b/Skill.html
@@ -6,79 +6,94 @@ permalink: /skill/
 <!-- Skills -->
             <section id="section3">
                 <div class="container">
-                    <h2>My Skills Values</h2>
+                    <h2>My Skills </h2>
                     <div class="row">
-                        <div class="col-sm-6">
-                            <h4>Technical Skills</h4>
-                            <label class="progress-bar-label">Wordpress</label>
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
-                                    <span>85%</span>
-                                </div>
-                                <!-- end .progress-bar -->
-                            </div>
-                            <!-- end .progress -->
-                            <label class="progress-bar-label">Photoshop</label>
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
-                                    <span>99%</span>
-                                </div>
-                                <!-- end .progress-bar -->
-                            </div>
-                            <!-- end .progress -->
-                            <label class="progress-bar-label">HTML&amp;CSS</label>
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                                    <span>75%</span>
-                                </div>
-                                <!-- end .progress-bar -->
-                            </div>
-                            <!-- end .progress -->
-                            <label class="progress-bar-label">Javascript</label>
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
-                                    <span>67%</span>
-                                </div>
-                                <!-- end .progress-bar -->
-                            </div>
-                            <!-- end .progress -->
-                        </div>
+                    	<!-- 
+                    	                        <div class="col-sm-6">
+                    	                            <h4>Technical Skills</h4>
+                    	                            <label class="progress-bar-label">Wordpress</label>
+                    	                            <div class="progress">
+                    	                                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+                    	                                    <span>85%</span>
+                    	                                </div>
+                    	                                end .progress-bar
+                    	                            </div>
+                    	                            end .progress
+                    	                            <label class="progress-bar-label">Photoshop</label>
+                    	                            <div class="progress">
+                    	                                <div class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
+                    	                                    <span>99%</span>
+                    	                                </div>
+                    	                                end .progress-bar
+                    	                            </div>
+                    	                            end .progress
+                    	                            <label class="progress-bar-label">HTML&amp;CSS</label>
+                    	                            <div class="progress">
+                    	                                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                    	                                    <span>75%</span>
+                    	                                </div>
+                    	                                end .progress-bar
+                    	                            </div>
+                    	                            end .progress
+                    	                            <label class="progress-bar-label">Javascript</label>
+                    	                            <div class="progress">
+                    	                                <div class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
+                    	                                    <span>67%</span>
+                    	                                </div>
+                    	                                end .progress-bar
+                    	                            </div>
+                    	                            end .progress
+                    	                        </div> -->
                         <!-- end .col-sm-6 -->
-                        <div class="col-sm-6">
-                            <h4>Knowledge</h4>
-                            <div class="row">
-                                <div class="col-sm-6">
+                        <div class="col-sm-4">
+                            <h4>Coding</h4>
+                                <div class="col-sm-12">
                                     <ul class="list-icons purple bold-list">
-                                        <li><i class="md-arrow-forward"></i>Install and Configure</li>
-                                        <li><i class="md-arrow-forward"></i>Web Usability</li>
-                                        <li><i class="md-arrow-forward"></i>Digital Painting</li>
-                                        <li><i class="md-arrow-forward"></i>Grid and Layout</li>
-                                        <li><i class="md-arrow-forward"></i>Mobile App Design</li>
-                                        <li><i class="md-arrow-forward"></i>Graphical Design</li>
-                                        <li><i class="md-arrow-forward"></i>SEO Optimization</li>
+                                        <li><i class="md-arrow-forward"></i>JavaScript</li>
+                                        <li><i class="md-arrow-forward"></i>JQuery</li>
+                                        <li><i class="md-arrow-forward"></i>Angularjs</li>
+                                        <li><i class="md-arrow-forward"></i>Handlebarsjs</li>
+                                        <li><i class="md-arrow-forward"></i>Gruntjs</li>
+                                        <li><i class="md-arrow-forward"></i>HTML5, CSS3</li>
+                                        <li><i class="md-arrow-forward"></i>PHP, Mysql</li>
                                     </ul>
                                 </div>
                                 <!-- end .col-sm-6 -->
-                                <div class="col-sm-6">
-                                    <ul class="list-icons purple bold-list">
-                                        <li><i class="md-arrow-forward"></i>UX and UI Design</li>
-                                        <li><i class="md-arrow-forward"></i>Logo Design</li>
-                                        <li><i class="md-arrow-forward"></i>3D Animation & Visual Effects</li>
-                                        <li><i class="md-arrow-forward"></i>Audio Video Editing</li>
-                                        <li><i class="md-arrow-forward"></i>Photography</li>
-                                        <li><i class="md-arrow-forward"></i>Web Development</li>
-                                        <li><i class="md-arrow-forward"></i>Digital Marketing</li>
-                                    </ul>
-                                </div>
-                                <!-- end .col-sm-6 -->
-                            </div>
+                                
+                            	
                             <!-- end .row -->
                         </div>
                         <!-- end .col-sm-6 -->
+                        <div class="col-sm-4">
+                                	<h4>CMS and Frameworks</h4>
+                                    <ul class="list-icons purple bold-list">
+                                        <li><i class="md-arrow-forward"></i>Magento Ecommerce</li>
+                                        <li><i class="md-arrow-forward"></i>Worpress Blogging System</li>
+                                        <li><i class="md-arrow-forward"></i>Joomla and Drupal CMS</li>
+                                        <li><i class="md-arrow-forward"></i>Laravel</li>
+                                        <li><i class="md-arrow-forward"></i>Slim Micro Rest Services Framework</li>
+                                        <li><i class="md-arrow-forward"></i>PhoneGap Framework(Hybrid Mobile Apps)</li>
+                                        <li><i class="md-arrow-forward"></i>Electron Framework(Hybrid Desktop Apps)</li>
+                                    </ul>
+                                </div>
+                          <div class="col-sm-4">
+                                	<h4>Version Control Systems</h4>
+                                    <ul class="list-icons purple bold-list">
+                                        <li><i class="md-arrow-forward"></i>SVN</li>
+                                        <li><i class="md-arrow-forward"></i>GIT</li>
+                                    </ul>
+                                    <h4>REST API Integrations</h4>
+                                    <ul  class="list-icons purple bold-list">
+                                        <li><i class="md-arrow-forward"></i>Paypal &amp; Authorize.net API's </li>
+                                        <li><i class="md-arrow-forward"></i>Mailchimp, AmazonSES for Email Services </li>
+                                        <li><i class="md-arrow-forward"></i>SMS Gateway Integrations</li>
+                                        <li><i class="md-arrow-forward"></i>REST Service Integration Web Apps</li>
+                                    </ul>
+                                </div>
                     </div>
                     <!-- end .row -->
                     <div class="spacer"></div>
-                    <h4>Language Skills</h4>
+                    <h4>Development and Server Administration on Operating Systems</h4>
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="circle-progress-wrapper clearfix">
@@ -87,7 +102,7 @@ permalink: /skill/
                                 </div>
                                 <!-- end .circle-progress -->
                                 <div class="circle-progress-label-wrapper">
-                                    <label class="circle-progress-label">English Experienced</label>
+                                    <label class="circle-progress-label">Any Linux Distro</label>
                                 </div>
                             </div>
                             <!-- end .circle-progress-wrapper -->
@@ -96,11 +111,11 @@ permalink: /skill/
                         <div class="col-sm-4">
                             <div class="circle-progress-wrapper clearfix">
                                 <div class="circle-progress">
-                                    <input type="text" class="dial" value="80" data-color="#7c4dff" data-from="0" data-to="80" />
+                                    <input type="text" class="dial" value="60" data-color="#7c4dff" data-from="0" data-to="80" />
                                 </div>
                                 <!-- end .circle-progress -->
                                 <div class="circle-progress-label-wrapper">
-                                    <label class="circle-progress-label">French Advanced</label>
+                                    <label class="circle-progress-label">Windows Server 2008, 2012</label>
                                 </div>
                             </div>
                             <!-- end .circle-progress-wrapper -->
@@ -109,11 +124,11 @@ permalink: /skill/
                         <div class="col-sm-4">
                             <div class="circle-progress-wrapper clearfix">
                                 <div class="circle-progress">
-                                    <input type="text" class="dial" value="69" data-color="#7c4dff" data-from="0" data-to="69" />
+                                    <input type="text" class="dial" value="39" data-color="#7c4dff" data-from="0" data-to="69" />
                                 </div>
                                 <!-- end .circle-progress -->
                                 <div class="circle-progress-label-wrapper">
-                                    <label class="circle-progress-label">German Basic</label>
+                                    <label class="circle-progress-label">Mac and Apple Server</label>
                                 </div>
                             </div>
                             <!-- end .circle-progress-wrapper -->
