--- a/about.html
+++ b/about.html
@@ -8,22 +8,25 @@ permalink: /about/
                 <div class="container">
                     <h2>About Me</h2>
                     <div class="row">
-                        <div class="col-sm-3">
+                        <!-- <div class="col-sm-3">
                             <img src="{{ site.url }}/images/man02.png" alt="man" class="img-responsive section-img">
-                        </div>
+                        </div> -->
                         <!-- end .col-sm-3 -->
-                        <div class="col-sm-9">
-                            <h3 class="small-margin-bottom">Benjamin Thomson</h3>
-                            <h5>Web & UX Designer</h5>
-                            <p>Ultricies nisi voluptatem, illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo nemo enim ipsam voluptatem. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque latu dantium, totam rem aperiam, eaque ipsa quae ab illo tempor dignissim at. </p>
-                            <div class="signature"><img src="{{ site.url }}/images/signature.png" alt="signature" class="img-responsive">
-                            </div>
+                        <div class="col-sm-12">
+                            <h3 class="small-margin-bottom">Ravi Teja Gangineni</h3>
+                            <h5>Full Stack Web Developer</h5>
+                            <p>I am Ravi Teja Gangineni, Shortly people call me Ravi or Teja. For the exposure i got, i am happy for being the part of IITians family, being passed out in 2013 from IIT(BHU) Varanasi, Where i completed Integrated dual degree in Pharmaceutical Engg.</p>
+                            
+                            <p>I am passionate towards coding and Colors. Which makes me love to code in different Languages and design images and compose visual effects using Photoshop and After affects </p>
+                            
+                            <!-- <div class="signature"><img src="{{ site.url }}/images/signature.png" alt="signature" class="img-responsive">
+                            </div> -->
                             <ul class="list-unstyled text-uppercase">
-                                <li><b>Date Of Birth:</b> 24 Jan 1989</li>
-                                <li><b>Phone:</b> 012-345-6789</li>
-                                <li><b>Email:</b> Sility@example.com</li>
-                                <li><b>Address:</b> 123 Sility, South Corner Street, Melborne, Australia.</li>
-                                <li><b>Website:</b> http://www.example.com</li>
+                                <!-- <li><b>Date Of Birth:</b> 24 Jan 1989</li>
+                                <li><b>Phone:</b> 012-345-6789</li> -->
+                                <li><b>Email:</b> rteja7228@gmail.com</li>
+                                <li><b>Current Location:</b>Hyderabad, India.</li>
+                                <li><b>Website:</b> http://raviteja.gangineni.com</li>
                             </ul>
                             <!-- end .list-unstyled -->
                             <div class="spacer"></div>
@@ -33,7 +36,7 @@ permalink: /about/
                                     <div class="service">
                                         <div class="icon"><i class="ion-monitor"></i>
                                         </div>
-                                        <h5>Web & UX Design</h5>
+                                        <h5>Front End Development</h5>
                                     </div>
                                     <!-- end .service -->
                                 </div>
@@ -49,9 +52,9 @@ permalink: /about/
                                 <!-- end .col-sm-4 -->
                                 <div class="col-sm-4">
                                     <div class="service">
-                                        <div class="icon"><i class="ion-trophy"></i>
+                                        <div class="icon"><i class="ion-code"></i>
                                         </div>
-                                        <h5>Marketing</h5>
+                                        <h5>Backend  Design and Development</h5>
                                     </div>
                                     <!-- end .service -->
                                 </div>
