--- a/contact.html
+++ b/contact.html
@@ -12,59 +12,60 @@ permalink: /contact/
                         <div class="col-sm-5">
                             <h5>Contact Address</h5>
                             <ul class="list-icons list-unstyled">
-                                <li><i class="ion-ios-location-outline"></i>123 Sility, South Corner Street,
-                                    <br />Melbornem Australia.</li>
-                                <li><i class="ion-iphone"></i>Phone: +61 012 345 6789</li>
-                                <li><i class="ion-ios-email-outline"></i>Email: <a href="mailto:example@gmail.com">example@gmail.com</a>
+                                <li><i class="ion-ios-location-outline"></i>Hyderabad, India
+                                    <br /></li>
+                                <!-- <li><i class="ion-iphone"></i>Phone: +61 012 345 6789</li> -->
+                                <li><i class="ion-ios-email-outline"></i>Email: <a href="mailto:rteja7228@gmail.com">rteja7228@gmail.com</a>
                                 </li>
-                                <li><i class="ion-ios-home-outline"></i>Website: <a href="#">info@sility.com</a>
+                                <li><i class="ion-ios-home-outline"></i>Website: <a href="http://raviteja.gangineni.com/">http://raviteja.gangineni.com</a>
                                 </li>
                             </ul>
                             <div class="spacer"></div>
                             <div class="social-icons">
-                                <a href="#" class="social-icon"><i class="fa fa-facebook"></i></a>
-                                <a href="#" class="social-icon"><i class="fa fa-twitter"></i></a>
-                                <a href="#" class="social-icon"><i class="fa fa-google-plus"></i></a>
-                                <a href="#" class="social-icon"><i class="fa fa-behance"></i></a>
-                                <a href="#" class="social-icon"><i class="fa fa-dribbble"></i></a>
+                                <a href="https://www.facebook.com/rteja91" class="social-icon"><i class="fa fa-facebook"></i></a>
+                                <a href="https://twitter.com/rteja91" class="social-icon"><i class="fa fa-twitter"></i></a>
+                                <a href="https://in.linkedin.com/in/gangineniraviteja" class="social-icon"><i class="fa fa-linkedin"></i></a>
+                                <a href="https://plus.google.com/u/0/+RaviTejaGangineni" class="social-icon"><i class="fa fa-google-plus"></i></a>
+                                <!-- <a href="#" class="social-icon"><i class="fa fa-behance"></i></a>
+                                <a href="#" class="social-icon"><i class="fa fa-dribbble"></i></a> -->
                             </div>
                             <!-- end .social-icons -->
                             <div class="spacer"></div>
                         </div>
                         <div class="col-sm-7">
-                            <h5>Contact Form</h5>
+                            <!-- <h5>Contact Form</h5>
                             <form action="#" method="post" class="form-horizontal contact-form">
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label">Name</label>
                                     <div class="col-sm-10">
                                         <input type="text" class="contact-name" name="contact-name" />
                                     </div>
-                                    <!-- end .col-sm-10 -->
+                                    end .col-sm-10
                                 </div>
-                                <!-- end .form-group -->
+                                end .form-group
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label">Email</label>
                                     <div class="col-sm-10">
                                         <input type="email" class="contact-email" name="contact-email" />
                                     </div>
-                                    <!-- end .col-sm-10 -->
+                                    end .col-sm-10
                                 </div>
-                                <!-- end .form-group -->
+                                end .form-group
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label">Message</label>
                                     <div class="col-sm-10">
                                         <textarea name="contact-message" class="contact-message" rows="3"></textarea>
                                     </div>
-                                    <!-- end .col-sm-10 -->
+                                    end .col-sm-10
                                 </div>
-                                <!-- end .form-group -->
+                                end .form-group
                                 <div class="form-group">
                                     <div class="col-sm-10 col-sm-offset-2">
                                         <button type="submit" class="button solid-button purple">Send Message</button>
                                     </div>
-                                    <!-- end .col-sm-10 -->
+                                    end .col-sm-10
                                 </div>
-                                <!-- end .form-group -->
+                                end .form-group
                                 <div class="contact-loading alert alert-info form-alert">
                                     <span class="message">Loading...</span>
                                     <button type="button" class="close" data-hide="alert" aria-label="Close"><i class="fa fa-times"></i>
@@ -80,7 +81,7 @@ permalink: /contact/
                                     <button type="button" class="close" data-hide="alert" aria-label="Close"><i class="fa fa-times"></i>
                                     </button>
                                 </div>
-                            </form>
+                            </form> -->
                             <!-- end contact-form -->
                         </div>
                     </div>
