--- a/education.html
+++ b/education.html
@@ -13,8 +13,8 @@ permalink: /education/
                         <div class="item">
                             <div class="marker"></div>
                             <div class="content">
-                                <span>University Of Design</span>
-                                <h4>Master Degree of Design</h4>
+                                <span>Andhra Pradesh State Board</span>
+                                <h4>Secondary School Certificate</h4>
                             </div>
                             <div class="year">2005 - 2006</div>
                         </div>
@@ -22,29 +22,29 @@ permalink: /education/
                         <div class="item">
                             <div class="marker"></div>
                             <div class="content">
-                                <span>University Of Design</span>
-                                <h4>Master Degree of Design</h4>
+                                <span>Andhra Pradesh</span>
+                                <h4>Board of Intermediate Education</h4>
                             </div>
-                            <div class="year">2005 - 2006</div>
+                            <div class="year">2006 - 2008</div>
                         </div>
                         <!-- end item -->
                         <div class="item">
+                            <div class="marker"></div>
+                            <div class="content">
+                                <span>IIT(BHU), Varanasi</span>
+                                <h4>Integrated Masters Degree.</h4>
+                            </div>
+                            <div class="year">2008 - 2013</div>
+                        </div>
+                        <!-- end item -->
+                        <!-- <div class="item">
                             <div class="marker"></div>
                             <div class="content">
                                 <span>University Of Design</span>
                                 <h4>Master Degree of Design</h4>
                             </div>
                             <div class="year">2005 - 2006</div>
-                        </div>
-                        <!-- end item -->
-                        <div class="item">
-                            <div class="marker"></div>
-                            <div class="content">
-                                <span>University Of Design</span>
-                                <h4>Master Degree of Design</h4>
-                            </div>
-                            <div class="year">2005 - 2006</div>
-                        </div>
+                        </div> -->
                         <!-- end item -->
                         <div class="line"></div>
                     </div>
@@ -63,9 +63,9 @@ permalink: /education/
                         <!-- end .col-sm-2 -->
                         <div class="col-sm-2 col-xs-6">
                             <div class="icon-box">
-                                <div class="icon"><i class="ion-ios-camera-outline"></i>
+                                <div class="icon"><i class="fa fa-film"></i>
                                 </div>
-                                <h6>Photography</h6>
+                                <h6>Watching Movies</h6>
                             </div>
                             <!-- end .icon-box -->
                         </div>
