--- a/experience.html
+++ b/experience.html
@@ -7,21 +7,21 @@ permalink: /experience/
             <!-- Experience -->
             <section id="section4">
                 <div class="container">
-                    <h2>8 Years Experience</h2>
+                    <h2>4 Years Experience</h2>
                     <div class="experience-timeline">
                         <div class="experience-block clearfix">
                             <div class="meta">
-                                <span class="year">2012 - Current</span>
-                                <span class="company">Themeforest</span>
+                                <span class="year">June 2015 - Current</span>
+                                <span class="company">Kore Inc.</span>
                             </div>
                             <!-- end .meta -->
                             <div class="content">
-                                <h5>Senior Web & UX Designer</h5>
-                                <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velitus sed quia non num quam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                                <h5>Software Engineer - Web Application Developer</h5>
+                                <p>Developing web application Using Kony Framework, Jquery, Handlebars, Multiple Jquery Plugins.</p>
                             </div>
                             <!-- end .content -->
                             <div class="icon">
-                                <i class="ion-easel"></i>
+                                <i class="fa fa-desktop"></i>
                             </div>
                             <!-- end .icon -->
                             <div class="line"></div>
@@ -29,17 +29,17 @@ permalink: /experience/
                         <!-- end .experience-block -->
                         <div class="experience-block clearfix">
                             <div class="meta">
-                                <span class="year">2008 - 2012</span>
-                                <span class="company">Graphicriver</span>
+                                <span class="year">July 2013 - June 2015</span>
+                                <span class="company">CloudFuze Inc.</span>
                             </div>
                             <!-- end .meta -->
                             <div class="content">
-                                <h5>Graphic Designer</h5>
-                                <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velitus sed quia non num quam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                                <h5>Cloud Infra Engineer</h5>
+                                <p>Developing webapplication using RESTful Services, Jquery, Html5 and CSS3. I worked on Xen Hypervisor, Cloud Linux Servers. Deploy Services like Web, DB, Load balancers, Apache, Nginx, Zimbra Mail Server, MySql Servers, Cloud Infrastructure Planning and implementing them to provide High Available Applications Over the Internet.</p>
                             </div>
                             <!-- end .content -->
                             <div class="icon">
-                                <i class="ion-images"></i>
+                                <i class="ion-ios-cloud-outline"></i>
                             </div>
                             <!-- end .icon -->
                             <div class="line"></div>
@@ -47,26 +47,46 @@ permalink: /experience/
                         <!-- end .experience-block -->
                         <div class="experience-block clearfix">
                             <div class="meta">
-                                <span class="year">2006 - 2008</span>
-                                <span class="company">Codecanyon</span>
+                                <span class="year">July 2013 - June 2015</span>
+                                <span class="company">Exinent LLC</span>
                             </div>
                             <!-- end .meta -->
                             <div class="content">
                                 <h5>Web Developer</h5>
-                                <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velitus sed quia non num quam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                                <p>PHP Development on CMS like Drupal, Wordpress,Zend development and Magento Ecommerce Framework, Performance Tuning of Apache, Nginx Webserver, Mysql Server.</p>
                             </div>
                             <!-- end .content -->
                             <div class="icon">
                                 <i class="ion-card"></i>
                             </div>
                             <!-- end .icon -->
+                            <div class="line"></div>
+                        </div>
+                        <!-- end .experience-block --> 
+                        <div class="experience-block clearfix">
+                            <div class="meta">
+                                <span class="year">March 2011 - April 2012</span>
+                                <span class="company">IIT(BHU), Varanasi</span>
+                            </div>
+                            <!-- end .meta -->
+                            <div class="content">
+                                <h5>Student Administrator - Web Management Group</h5>
+                                <p>Email Administration, Developing html based web pages to various departments of the college.</p>
+                            </div>
+                            <!-- end .content -->
+                            <div class="icon">
+                                <i class="fa fa-graduation-cap"></i>
+                            </div>
+                            <!-- end .icon -->
+                            <div class="line"></div>
                         </div>
                         <!-- end .experience-block -->
+                        
                     </div>
                     <!-- end .experience-timeline -->
 
                     <!-- Testimonials -->
-                    <div class="row">
+      <!--               <div class="row">
                         <div class="col-sm-8 col-sm-offset-2">
                             <div class="testimonial-slider owl-carousel">
                                 <div>
@@ -91,11 +111,11 @@ permalink: /experience/
                                     <span class="author">swetain , CEO of Texco Company</span>
                                 </div>
                             </div>
-                            <!-- end .testimonial-slider -->
+                            end .testimonial-slider
                         </div>
-                        <!-- end .col-sm-8 -->
+                        end .col-sm-8
                     </div>
-                    <!-- end .row -->
+                    end .row -->
 
                 </div>
                 <!-- end .container -->
