Updated Blog and work

--- a/work/_posts/2008-07-21-portitem-10.html
+++ b/work/_posts/2008-07-21-portitem-10.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 type : work
-title:  "Portfolioitem 10"
+title:  "Jekyll Blogging system with Sility"
 date:   2008-07-21 12:21:29
 workCat : websites
 author : Teja
@@ -9,7 +9,7 @@ portfolioimg : /images/portfolio10.jpg
 #options : image-left, image-right, image-top
 imagepos : image-left
 authorimage : /images/author.png
-authorinfo : voluptatem accusantium doloremque laudanto tam rem aperiam, eaque ipsa quae. ab illo inventore veritatis et quasi architecto.
+authorinfo : I am a full stack web developer. I love to code my life in different ways.
 sliderimages : [images/portfolio-slider.jpg,images/portfolio-slider.jpg,images/portfolio-slider.jpg]
 relimages : [images/portfolio-related01.jpg,images/portfolio-related02.jpg]
 projecttitle : Shopping Bag
@@ -20,8 +20,3 @@ projectagency : DESIGN MEDIA WAVS
 Projecttype : BRANDING, ILLUSTRATOR
 projectlink :  "/"
 ---
-<p>
-voluptatem accusantium doloremque laudanto tam rem aperiam, eaque ipsa quae. ab illo inventore veritatis et quasi architecto.voluptatem accusantium doloremque laudanto tam rem aperiam, eaque ipsa quae. ab illo inventore veritatis et quasi architecto.voluptatem accusantium doloremque laudanto tam rem aperiam, eaque ipsa quae. ab illo inventore veritatis et quasi architecto.voluptatem accusantium doloremque laudanto tam rem aperiam, eaque ipsa quae. ab illo inventore veritatis et quasi architecto.
-voluptatem accusantium doloremque laudanto tam rem aperiam, eaque ipsa quae. ab illo inventore veritatis et quasi architecto.voluptatem accusantium doloremque laudanto tam rem aperiam, eaque ipsa quae. ab illo inventore veritatis et quasi architecto.
-voluptatem accusantium doloremque laudanto tam rem aperiam, eaque ipsa quae. ab illo inventore veritatis et quasi architecto.voluptatem accusantium doloremque laudanto tam rem aperiam, eaque ipsa quae. ab illo inventore veritatis et quasi architecto.
-</p>
