work and post updated

--- a/work/_posts/2008-07-21-portitem-10.html
+++ b/work/_posts/2008-07-21-portitem-10.html
@@ -2,9 +2,9 @@
 layout: post
 type : work
 title:  "Jekyll Blogging system with Sility"
-date:   2008-07-21 12:21:29
+date:   2015-12-21 12:21:29
 workCat : websites
-author : Teja
+author : Ravi Teja
 portfolioimg : /images/portfolio10.jpg
 #options : image-left, image-right, image-top
 imagepos : image-left
@@ -12,11 +12,11 @@ authorimage : /images/author.png
 authorinfo : I am a full stack web developer. I love to code my life in different ways.
 sliderimages : [images/portfolio-slider.jpg,images/portfolio-slider.jpg,images/portfolio-slider.jpg]
 relimages : [images/portfolio-related01.jpg,images/portfolio-related02.jpg]
-projecttitle : Shopping Bag
-projectdesc : Omnis iste natus error sit volup taisue mose accusantium doloremque ladain tium, totam rem aperiam, eaque ipama quae ab illo inventore veritatis et qasil architecto beatae vitae. dicta sunt epla cabo. Nemo enim ipsam volupt atemtr quia voluptas aut odit fugit, sed quia consequuntur
-projectdate : 22 MAR 2015
-projectclient : OSAMBEM
-projectagency : DESIGN MEDIA WAVS
-Projecttype : BRANDING, ILLUSTRATOR
+projecttitle : Jekyll Blogging system with sility
+projectdesc : I  tried to incorporate an awesome template Sility into jekyll. You Can Buy a license at themeforest.
+projectdate : 22 DEC 2015
+projectclient : No Client
+projectagency : No Agency
+Projecttype : HTML Template incorporation into Jekyll
 projectlink :  "/"
 ---
