updated image urls

--- a/work/_posts/2008-07-21-portitem-10.html
+++ b/work/_posts/2008-07-21-portitem-10.html
@@ -10,8 +10,8 @@ portfolioimg : /images/portfolio10.jpg
 imagepos : image-left
 authorimage : /images/author.png
 authorinfo : I am a full stack web developer. I love to code my life in different ways.
-sliderimages : [images/portfolio-slider.jpg,images/portfolio-slider.jpg,images/portfolio-slider.jpg]
-relimages : [images/portfolio-related01.jpg,images/portfolio-related02.jpg]
+sliderimages : [/images/portfolio-slider.jpg,/images/portfolio-slider.jpg,/images/portfolio-slider.jpg]
+relimages : [/images/portfolio-related01.jpg,/images/portfolio-related02.jpg]
 projecttitle : Jekyll Blogging system with sility
 projectdesc : I  tried to incorporate an awesome template Sility into jekyll. You Can Buy a license at themeforest.
 projectdate : 22 DEC 2015
