--- a/experience.html
+++ b/experience.html
@@ -9,9 +9,28 @@ permalink: /experience/
                 <div class="container">
                     <h2>4 Years Experience</h2>
                     <div class="experience-timeline">
+
                         <div class="experience-block clearfix">
                             <div class="meta">
-                                <span class="year">June 2015 - Current</span>
+                                <span class="year">June 2016 - Current</span>
+                                <span class="company">Ameriprise Financial Inc.</span>
+                            </div>
+                            <!-- end .meta -->
+                            <div class="content">
+                                <h5>Senior Associate - Engineering</h5>
+                                <p>Enabling DevOps </p>
+                            </div>
+                            <!-- end .content -->
+                            <div class="icon">
+                                <i class="fa fa-desktop"></i>
+                            </div>
+                            <!-- end .icon -->
+                            <div class="line"></div>
+                        </div>
+                        <!-- end .experience-block -->
+                        <div class="experience-block clearfix">
+                            <div class="meta">
+                                <span class="year">June 2015 - May 2016</span>
                                 <span class="company">Kore Inc.</span>
                             </div>
                             <!-- end .meta -->
