--- a/experience.html
+++ b/experience.html
@@ -18,7 +18,7 @@ permalink: /experience/
                             <!-- end .meta -->
                             <div class="content">
                                 <h5>Senior Associate - Engineering</h5>
-                                <p>Enabling DevOps </p>
+                                <p>Enabling DevOps in Digital Technologies. </p>
                             </div>
                             <!-- end .content -->
                             <div class="icon">
