--- a/experience.html
+++ b/experience.html
@@ -22,7 +22,7 @@ permalink: /experience/
                             </div>
                             <!-- end .content -->
                             <div class="icon">
-                                <i class="fa fa-desktop"></i>
+                                <i class="fa fa-cogs"></i>
                             </div>
                             <!-- end .icon -->
                             <div class="line"></div>
