--- a/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
+++ b/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
@@ -1,6 +1,20 @@
+<pre><code>---
+layout: post
+title:  "The days I relished seeking wisdom"
+date:   2008-10-21 18:19:20 +0530
+categories: RelivingThoseDays 
+comments: true
+abstractimg: /assets/img/blogimg/welcome.jpg
+---
+</code></pre>
+
+
+
 <h1 id="the-days-i-relished-seeking-wisdom">The days I relished seeking wisdom.</h1>
 
 <p>This is period between from 2008-2013 where my life transformed from self centered teen to socially matured graduate. The days started to understand and imbibe a new cultural paradigm(Food, Attitude, Sense of living life).</p>
+
+
 
 <h2 id="baby-steps-to-start-thinking-differently">Baby steps to start thinking differently</h2>
 
@@ -8,32 +22,50 @@
 
 <p>Yes Language Learnt…! what next…!</p>
 
+
+
 <h2 id="adopting-inclusive-nature-and-togetherness">Adopting inclusive nature and togetherness</h2>
 
 <p>The next comes adopting inclusive nature and togetherness. I was very selfish to share whatever I gathered from different sources as it took my energy and time. It does not took much time to understand sharing is caring towards each other. Ultimately, it’s going to circle around give and take policy. </p>
+
+
 
 <h2 id="unconditional-giving">Unconditional Giving.</h2>
 
 <p>If you give…You will get it back in some other form. Make sure you go for Unconditional Giving.</p>
 
+
+
 <h2 id="handling-responsibility-with-care">Handling Responsibility with care</h2>
 
 <p>When I started climbing steps with small power point talks in class to college and big events. Every experience is unique when you think I am going to do something different this time. A well grown adult emotions is from many experiences which one has gone through. Promotion to handle from one stage show to full event was great responsibility at the age it was taken. It was executed with near flawless ness with all support from Teachers,Seniors, Peers and Juniors. It was all bringing people together for common cause walking with them to reach the final goal which a leader has to envision. </p>
+
+
 
 <h2 id="two-exciting-journeys-together">Two exciting journeys together.</h2>
 
 <p>Two paradigms - one with neuroscience and the other with Technology. I carried out two things at once even though they are from two different extremes, where one track was due to inspiration and the other one was due to interest and passion. A challenge is always worth to take when it is Challenging your existence &amp; Survival.</p>
 
+
+
 <h3 id="neuro-science">Neuro Science:</h3>
 
 <p>Obviously my first score card in this area showed E which made me think about my existence or am i going to sink with this Grade i got out of struggle for 6 months. I realized that there is something fundamentally wrong which i have done to understand it. I Changed from result oriented strategy to knowledge oriented strategy led to A again in another 5 months. The Challenge which i have taken was inspiring to take it to next level. I was ready to do full length research for rest of my days. I continued it for next 3 years.</p>
+
+
 
 <h3 id="technology">Technology:</h3>
 
 <p>I have no idea why i was needing the laptop with only reason that i want to search my regular class notes over internet. Obviously Social networking sites. I was bored with lot of material collected for next 3 years from seniors within 2 months which i don’t know about their usage. It started with simple power point presentations which i practiced between my 10th standard &amp; +1. later Excel Where i started calculating all my lab readings having lot of values with automated formulas. </p>
 
+
+
 <h2 id="living-dreams-of-abroad-constraints">Living Dreams of Abroad &amp; Constraints</h2>
 
+
+
 <h2 id="graduating-in-political-play-arena">Graduating in Political play Arena</h2>
+
+
 
 <h2 id="entrepreneur-ideology">Entrepreneur Ideology</h2>
