Published with https://stackedit.io/

--- a/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
+++ b/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
@@ -1,4 +1,4 @@
----
+<pre><code>---
 layout: post
 title:  "The days I relished seeking wisdom"
 date:   2008-10-21 18:19:20 +0530
@@ -6,14 +6,14 @@ categories: RelivingThoseDays
 comments: true
 abstractimg: /assets/img/blogimg/welcome.jpg
 ---
+</code></pre>
 
-
+<p>{:.title}</p>
 
 <h1 id="the-days-i-relished-seeking-wisdom">The days I relished seeking wisdom.</h1>
 
-<p>This is period between from 2008-2013 where my life transformed from self centered teen to socially matured graduate. The days started to understand and imbibe a new cultural paradigm(Food, Attitude, Sense of living life).</p>
-
-
+<p>This is period between from 2008-2013 where my life transformed from self centered teen to socially matured graduate. The days started to understand and imbibe a new cultural paradigm(Food, Attitude, Sense of living life). <br>
+{:.title}</p>
 
 <h2 id="baby-steps-to-start-thinking-differently">Baby steps to start thinking differently</h2>
 
