--- a/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
+++ b/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
@@ -8,12 +8,9 @@ abstractimg: /assets/img/blogimg/welcome.jpg
 ---
 </code></pre>
 
-<p>{:.title}</p>
-
 <h1 id="the-days-i-relished-seeking-wisdom">The days I relished seeking wisdom.</h1>
 
-<p>This is period between from 2008-2013 where my life transformed from self centered teen to socially matured graduate. The days started to understand and imbibe a new cultural paradigm(Food, Attitude, Sense of living life). <br>
-{:.title}</p>
+<p>This is period between from 2008-2013 where my life transformed from self centered teen to socially matured graduate. The days started to understand and imbibe a new cultural paradigm(Food, Attitude, Sense of living life).</p>
 
 <h2 id="baby-steps-to-start-thinking-differently">Baby steps to start thinking differently</h2>
 
