Published with https://stackedit.io/

--- a/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
+++ b/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
@@ -52,9 +52,15 @@ abstractimg: /assets/img/blogimg/welcome.jpg
 
 <h3 id="technology">Technology:</h3>
 
-<p>I have no idea why i was needing the laptop with only reason that i want to search my regular class notes over internet. Obviously Social networking sites. I was bored with lot of material collected for next 3 years from seniors within 2 months which i don’t know about their usage. It started with simple power point presentations which i practiced between my 10th standard &amp; +1. later Excel Where i started calculating all my lab readings having lot of values with automated formulas. </p>
+<p>I have no idea why i was needing the laptop with only reason that i want to search my regular class notes over internet. Obviously Social networking sites. I was bored with lot of material collected for next 3 years from seniors within 2 months which i don’t know about their usage. It started with simple power point presentations which i practiced between my 10th standard &amp; +1. later Excel Where i started calculating all my lab readings having lot of values with automated formulas. I was hating to calculate same final formula using Scientific calculator, I am not sure now those excel sheets which i have prepared were used for next 3 generations. I still have them. Later i moved towards correcting a website as one of my friend said it will take time to update content. I took ftp details from him i started editing the content carefully. I started learning html and inline styling.</p>
+
+<p>More experiments with technology will shared on this blog. </p>
 
 
+
+<h3 id="meeting-point">Meeting point.</h3>
+
+<p>I knew little neuroscience and small piece of html which is not at all big stuff. After lot of study i came to know they both meet a point called <strong>Artificial Intelligence and Machine learning</strong>. I always started but never finished a Machine Learning Course till date [jan 15 2017].</p>
 
 <h2 id="living-dreams-of-abroad-constraints">Living Dreams of Abroad &amp; Constraints</h2>
 
