Published with https://stackedit.io/

--- a/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
+++ b/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
@@ -10,15 +10,13 @@ abstractimg: /assets/img/blogimg/welcome.jpg
 
 <h1 id="the-days-i-relished-seeking-wisdom">The days I relished seeking wisdom.</h1>
 
-<p>This is period between from 2008-2013 where my life transformed from self centered teen to socially matured graduate. The days started to understand and imbibe a new cultural paradigm(Food, Attitude, Sense of living life).</p>
+<p>This is period between from 2008-2013 at <strong>Indian Institute of Technology, (BHU) Varanasi</strong> where my life transformed from self centered teen to socially matured graduate. The days started to understand and imbibe a new cultural paradigm(Food, Attitude, Sense of living life).</p>
 
-<h2 id="baby-steps-to-start-thinking-differently">Baby steps to start thinking differently</h2>
+<h2 id="baby-steps-to-start-thinking-differently"><strong>Baby steps to start thinking differently</strong></h2>
 
 <p>Struggling to put things learnt as a language into practical public speaking are the best days with baby steps to start thinking differently towards next days of life.</p>
 
 <p>Yes Language Learnt…! what next…!</p>
-
-
 
 <h2 id="adopting-inclusive-nature-and-togetherness">Adopting inclusive nature and togetherness</h2>
 
