Published with https://stackedit.io/

--- a/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
+++ b/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
@@ -8,15 +8,21 @@ abstractimg: /assets/img/blogimg/welcome.jpg
 ---
 </code></pre>
 
+
+
 <h1 id="the-days-i-relished-seeking-wisdom">The days I relished seeking wisdom.</h1>
 
 <p>This is period between from 2008-2013 at <strong>Indian Institute of Technology, (BHU) Varanasi</strong> where my life transformed from self centered teen to socially matured graduate. The days started to understand and imbibe a new cultural paradigm(Food, Attitude, Sense of living life).</p>
+
+
 
 <h2 id="baby-steps-to-start-thinking-differently"><strong>Baby steps to start thinking differently</strong></h2>
 
 <p>Struggling to put things learnt as a language into practical public speaking are the best days with baby steps to start thinking differently towards next days of life.</p>
 
 <p>Yes Language Learnt…! what next…!</p>
+
+
 
 <h2 id="adopting-inclusive-nature-and-togetherness">Adopting inclusive nature and togetherness</h2>
 
@@ -60,7 +66,11 @@ abstractimg: /assets/img/blogimg/welcome.jpg
 
 <p>I knew little neuroscience and small piece of html which is not at all big stuff. After lot of study i came to know they both meet a point called <strong>Artificial Intelligence and Machine learning</strong>. I always started but never finished a Machine Learning Course till date [jan 15 2017].</p>
 
+
+
 <h2 id="living-dreams-of-abroad-constraints">Living Dreams of Abroad &amp; Constraints</h2>
+
+<p>While i was working with neuroscience and little bit understanding on Technology</p>
 
 
 
