Published with https://stackedit.io/

--- a/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
+++ b/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
@@ -1,5 +1,6 @@
-<pre><code>---
-layout: post
+<hr>
+
+<pre><code>layout: post
 title:  "The days I relished seeking wisdom"
 date:   2008-10-21 18:19:20 +0530
 categories: RelivingThoseDays 
@@ -7,8 +8,6 @@ comments: true
 abstractimg: /assets/img/blogimg/welcome.jpg
 ---
 </code></pre>
-
-
 
 <h1 id="the-days-i-relished-seeking-wisdom">The days I relished seeking wisdom.</h1>
 
@@ -70,9 +69,7 @@ abstractimg: /assets/img/blogimg/welcome.jpg
 
 <h2 id="living-dreams-of-abroad-constraints">Living Dreams of Abroad &amp; Constraints</h2>
 
-<p>While i was working with neuroscience and little bit understanding on Technology</p>
-
-
+<p>While i was working with neuroscience and little bit understanding on Technology. After lot of research and analysis, best place for me was </p>
 
 <h2 id="graduating-in-political-play-arena">Graduating in Political play Arena</h2>
 
