--- a/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
+++ b/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
@@ -69,10 +69,16 @@ abstractimg: /assets/img/blogimg/welcome.jpg
 
 <h2 id="living-dreams-of-abroad-constraints">Living Dreams of Abroad &amp; Constraints</h2>
 
-<p>While i was working with neuroscience and little bit understanding on Technology. After lot of research and analysis, best place for me was </p>
+<p>While i was working with neuroscience and little bit understanding on Technology. After lot of research and analysis, best place for me was US or European universities to continue my study of interest.</p>
+
+<p>Family needs and financial constraints made me think to step back from it. I am confident that i can go and work in my study of interest in some more days.</p>
 
 <h2 id="graduating-in-political-play-arena">Graduating in Political play Arena</h2>
 
+<p>What is challenging in the Top Tier institutes is to handle Competition which is political in nature. It takes time to understand this situations happening around and respond to it. We should never react to these situations. Just wait for the time and respond to it.</p>
 
+<p>I am happy to say that i had many such experiences while i was in the process of Graduating. I took some stones at me initially but later instances were handled with a lot maturity in that area. </p>
+
+<p>I always loved to play here and this is favorite brain sport through out my graduating time.</p>
 
 <h2 id="entrepreneur-ideology">Entrepreneur Ideology</h2>
